--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Menu Icon -->
     <div class="menu-icon" onclick="toggleMenu()">
-        <img src="icon.png" alt="Radio Icon" class="radio-icon"> <i class="fas fa-bars"></i>
+        <img src="icon-192x192.png" alt="Radio Icon" class="radio-icon"> <i class="fas fa-bars"></i>
     </div>
 
     <!-- Side Menu -->
