--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             navigator.serviceWorker.register('service-worker.js')
             .then(function(registration) {
                 console.log('Service Worker registered with scope:', registration.scope);
+                return registration.sync.register('sync-tag');
             })
             .catch(function(error) {
                 console.log('Service Worker registration failed:', error);
