--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="menu-icon" onclick="toggleMenu()">
-        <img src="icon-192x192.png" alt="Radio Icon" class="radio-icon"> <i class="fas fa-bars"></i>
+        <img src="/RockFM/icon-192x192.png" alt="Radio Icon" class="radio-icon"> <i class="fas fa-bars"></i>
     </div>
 
     <div class="side-menu" id="sideMenu">
