--- a/index.html
+++ b/index.html
@@ -1,80 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock City FM</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="manifest" href="manifest.json">
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js')
-            .then(function(registration) {
-                console.log('Service Worker registered with scope:', registration.scope);
+body {
+    margin: 0;
+    overflow: hidden;
+}
 
-                if ('sync' in registration) {
-                    registration.sync.register('sync-tag');
-                }
+.background-gif {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-                if ('periodicSync' in registration) {
-                    registration.periodicSync.register('periodic-sync-tag', {
-                        minInterval: 24 * 60 * 60 * 1000
-                    });
-                }
-            })
-            .catch(function(error) {
-                console.log('Service Worker registration failed:', error);
-            });
-        }
+#radio-gif {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+}
 
-        if ('Notification' in window && 'serviceWorker' in navigator) {
-            Notification.requestPermission().then(function(permission) {
-                if (permission === 'granted') {
-                    navigator.serviceWorker.ready.then(function(registration) {
-                        fetch('/RockFM/vapidPublicKey')
-                        .then(function(response) {
-                            return response.arrayBuffer();
-                        })
-                        .then(function(key) {
-                            registration.pushManager.subscribe({
-                                userVisibleOnly: true,
-                                applicationServerKey: new Uint8Array(key)
-                            }).then(function(subscription) {
-                                console.log('Push subscription:', subscription);
-                            }).catch(function(error) {
-                                console.error('Push subscription error:', error);
-                            });
-                        });
-                    });
-                }
-            });
-        }
-    </script>
-</head>
-<body>
+.menu-icon {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+}
 
-    <div class="background-gif">
-        <img id="radio-gif" src="background.gif" alt="Radio Tunes GIF">
-    </div>
+.radio-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
 
-    <div class="menu-icon" onclick="toggleMenu()">
-        <img src="/RockFM/icon-192x192.png" alt="Radio Icon" class="radio-icon"> <i class="fas fa-bars"></i>
-    </div>
+.side-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 20px;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    z-index: 1;
+}
 
-    <div class="side-menu" id="sideMenu">
-        <a href="https://rockcityfmradio.com/" target="_blank"><i class="fas fa-globe"></i> Website</a>
-        <a href="https://web.facebook.com/RockCityFMRadio/?ref=embed_page" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-        <a href="https://x.com/rockcityfm" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-        <a href="https://www.instagram.com/rockcityfmradio101.9" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-        <a href="https://rockcityfmradio.com/contact-us-2/" target="_blank"><i class="fas fa-phone"></i> Contact</a>
-        <a href="http://linktr.ee/rockcityfmradio" target="_blank"><i class="fas fa-tree"></i> LinkTree</a>
-        <a href="https://rockcitybooking.com/" target="_blank"><i class="fas fa-podcast"></i> Book Airtime</a>
-    </div>
+.side-menu a {
+    display: block;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+}
 
-    <audio id="audio-player" src="https://stream.zeno.fm/g6qax5vq0v8uv" style="display: none;"></audio>
+.side-menu a i {
+    margin-right: 10px;
+}
 
-    <script src="script.js"></script>
-
-</body>
-</html>
+.side-menu.open {
+    transform: translateX(0);
+}
